fix: add extra padding to last homepage element

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -24,6 +24,10 @@ div.shrug {
     transition: all 0.2s;
     width: 500px;
 
+    &:last-child {
+        margin: 0.5rem auto 1rem;
+    }
+
     &.interactable {
         border: 2px solid $primary-green;
         box-shadow: inset 0 0 8px 0px $primary-green;
